--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     <link href="../style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header>
-      <h1>High Tatras</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h3>- TRAVEL -</h3>
+        <h1>Welcome to High Tatras</h1>
+        <h2>Mountain range in Slovakia</h2>
+        <a href="#more">Learn more</a>
+      </header>
+    </div>
   </body>
 </html>
