Created the Footer of the page
Footer content added and styled with CSS.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,56 @@
         <h2>Mountain range in Slovakia</h2>
         <a href="#more">Learn more</a>
       </header>
+      <footer>
+        <section class="grid">
+          <div>
+            <h3>More about</h3>
+            <ul>
+              <li>
+                <a href="https://www.vt.sk/en/" target="_blank"
+                  >High Tatras website</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://maps.app.goo.gl/D6rQzVeeLvw4CqTa8"
+                  target="_blank"
+                  >Map of High Tatras</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://regiontatry.sk/en/tourist-information/transport-in-the-region/"
+                  target="_blank"
+                  >Public transport map</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Simona and I grew up in Slovakia near by High
+              Tatras. I created this page as a project and to showcase this
+              beautiful part of nature.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for my SheCodes
+              Responsive Add-on workshop to develop my coding skills.
+            </p>
+            <br />
+            This project wa coded by Simona Katarína Hlinka and is
+            <a
+              href="https://github.com/SimonaKatarina/high-tatras-project"
+              target="_blank"
+              >Open-sourced</a
+            >
+          </div>
+        </section>
+      </footer>
     </div>
   </body>
 </html>
