Main section created and content added
Added a main section to the page and using grids style the content.
Making sure everything is responsive.
Images, text, sections, grids.....
And edited otherCSS to style the page and content better.

--- a/index.html
+++ b/index.html
@@ -19,30 +19,54 @@
         <h3>- TRAVEL -</h3>
         <h1>Welcome to High Tatras</h1>
         <h2>Mountain range in Slovakia</h2>
-        <a href="#more">Learn more</a>
+        <a href="#more"> Learn more ✨</a>
       </header>
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              class="tatry-photo"
+              src="img/tatry-13.jpg"
+              alt="Nature mountain photo of High Tatras"
+            />
+          </div>
+          <div>
+            <h2>| Why High Tatras ?</h2>
+            <h3>High Tatras an underrated Hiking GEM of Slovakia</h3>
+            <p>
+              The mountains that you’ve likely never heard of. They are a part
+              of the the northern edge of Slovakia and southern border of Poland
+              in Europe. They are the most elevated section of the Tatra chain
+              within the Carpathian Mountains and form a natural border between
+              the two countries. The area is popular with outdoor enthusiasts.
+              Depending on the season, people come and visit for skiing,
+              climbing and hiking.
+            </p>
+          </div>
+        </section>
+      </main>
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns-narrow">
           <div>
             <h3>More about</h3>
             <ul>
               <li>
                 <a href="https://www.vt.sk/en/" target="_blank"
-                  >High Tatras website</a
+                  >High Tatras website 🏞</a
                 >
               </li>
               <li>
                 <a
                   href="https://maps.app.goo.gl/D6rQzVeeLvw4CqTa8"
                   target="_blank"
-                  >Map of High Tatras</a
-                >
+                  >Map of High Tatras 🗺
+                </a>
               </li>
               <li>
                 <a
                   href="https://regiontatry.sk/en/tourist-information/transport-in-the-region/"
                   target="_blank"
-                  >Public transport map</a
+                  >Public transport map 🚌</a
                 >
               </li>
             </ul>
@@ -51,8 +75,8 @@
             <h3>About me</h3>
             <p>
               Hi! My name is Simona and I grew up in Slovakia near by High
-              Tatras. I created this page as a project and to showcase this
-              beautiful part of nature.
+              Tatras. Showcasing a beautiful part of nature through this project
+              page I've created.
             </p>
           </div>
           <div>
