Three grid column cards created into our page/content
Created a card column to display content of the project and make it look good.
Duplicated until I had 3 columns ready.
Images added for a better visual.
Styled everything with CSS, also made changes and updates.
Images made to be responsive, buttons working.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,111 @@
               within the Carpathian Mountains and form a natural border between
               the two countries. The area is popular with outdoor enthusiasts.
               Depending on the season, people come and visit for skiing,
-              climbing and hiking.
+              climbing and hiking. 🎒
             </p>
+          </div>
+        </section>
+        <section class="secondary">
+          <h2 class="text-center">.TRAILS.</h2>
+          <h3 class="text-center">My favorite hike trails to take 👟</h3>
+          <h2 class="text-center">ooo</h2>
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-heading">
+                <img
+                  src="img/tatry-2.jpg"
+                  alt="Cottage at zelene pleso photo"
+                  class="img-responsive"
+                />
+                <div class="card-body">
+                  <h4>Cottage at Zelené pleso</h4>
+                  <p>
+                    The cottage lies by an emerald green lake surrounded by
+                    massive peaks of the High Tatras. It is open all year round
+                    and offers a rich selection of food and drinks.
+                  </p>
+                  <h5>What I like about it :</h5>
+                  <p>
+                    I consider it to be one of the easiest and most enjoyable
+                    daytime adventures a person could go and experience. Fresh
+                    air and beautiful views all around !
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a
+                    href="https://chataprizelenomplese.sk/en/"
+                    target="_blank"
+                    class="btn"
+                    >Learn more...</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-heading">
+                <img
+                  src="img/tatry-3.jpg"
+                  alt="Nature picture of tatry"
+                  class="img-responsive"
+                />
+                <div class="card-body">
+                  <h4>Rocky Valley</h4>
+                  <p>
+                    Highly visited all year-round "Skalnatá dolina" thanks to
+                    the hiking trails and connections of transport. The most
+                    interesting attraction for tourists is the cable car to
+                    Lomnický peak.
+                  </p>
+                  <h5>What I like about it :</h5>
+                  <p>
+                    The cable car transport is fun to experience which is why
+                    many people do. It's like a classic thing to make sure you
+                    do it when you get the chance.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a
+                    href="https://www.vysoketatry.com/ciele/sdolina/en.html"
+                    target="_blank"
+                    class="btn"
+                    >Learn more...</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-heading">
+                <img
+                  src="img/tatry-6.jpg"
+                  alt="Kôprovský štít photo"
+                  class="img-responsive"
+                />
+                <div class="card-body">
+                  <h4>Kôprovský štít</h4>
+                  <p>
+                    It's a climb of about a thousand meters with spectacular
+                    views from the top. Demanding high-mountain tour. The ascent
+                    to Kôprovský štít peak alone is demanding but technically
+                    simple.
+                  </p>
+                  <h5>What I like about it :</h5>
+                  <p>
+                    It was a challenge to go and do it myself but that feeling
+                    after you accomplish something difficult is unbelievable and
+                    double standing on top of a peak. I hated and at the same
+                    time liked seeing how much can one push himself and make it.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a
+                    href="https://www.solofemalewanderer.com/blog/kprovsky-tit"
+                    target="_blank"
+                    class="btn"
+                    >Learn more...</a
+                  >
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
