Implementing Embeds to share/show location/address
Embeds added into the project page also using grids.
Making the embeds responsive, some images display none for smaller devices.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2>| Why High Tatras ?</h2>
             <h3>High Tatras an underrated Hiking GEM of Slovakia</h3>
             <p>
-              The mountains that you’ve likely never heard of. They are a part
+              The mountains that you've likely never heard of. They are a part
               of the the northern edge of Slovakia and southern border of Poland
               in Europe. They are the most elevated section of the Tatra chain
               within the Carpathian Mountains and form a natural border between
@@ -50,99 +50,122 @@
           <h2 class="text-center">ooo</h2>
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-heading">
+              <div class="card-heading grid">
                 <img
                   src="img/tatry-2.jpg"
                   alt="Cottage at zelene pleso photo"
                   class="img-responsive"
                 />
-                <div class="card-body">
-                  <h4>Cottage at Zelené pleso</h4>
-                  <p>
-                    The cottage lies by an emerald green lake surrounded by
-                    massive peaks of the High Tatras. It is open all year round
-                    and offers a rich selection of food and drinks.
-                  </p>
-                  <h5>What I like about it :</h5>
-                  <p>
-                    I consider it to be one of the easiest and most enjoyable
-                    daytime adventures a person could go and experience. Fresh
-                    air and beautiful views all around !
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <a
-                    href="https://chataprizelenomplese.sk/en/"
-                    target="_blank"
-                    class="btn"
-                    >Learn more...</a
-                  >
-                </div>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2606.495677014804!2d20.2210879!3d49.210125999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473e21e7bf094aff%3A0x94a6741603ceecf!2sChata%20pri%20Zelenom%20plese!5e0!3m2!1snl!2snl!4v1723881648800!5m2!1snl!2snl"
+                  style="border: 0"
+                  class="embed"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
+              <div class="card-body">
+                <h4>Cottage at Zelené pleso</h4>
+                <p>
+                  The cottage lies by an emerald green lake surrounded by
+                  massive peaks of the High Tatras. It is open all year round
+                  and offers a rich selection of food and drinks.
+                </p>
+                <h5>What I like about it :</h5>
+                <p>
+                  I consider it to be one of the easiest and most enjoyable
+                  daytime adventures a person could go and experience. Fresh air
+                  and beautiful views all around !
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://chataprizelenomplese.sk/en/"
+                  target="_blank"
+                  class="btn"
+                  >Learn more...</a
+                >
               </div>
             </div>
             <div class="card">
-              <div class="card-heading">
+              <div class="card-heading grid">
                 <img
                   src="img/tatry-3.jpg"
                   alt="Nature picture of tatry"
                   class="img-responsive"
                 />
-                <div class="card-body">
-                  <h4>Rocky Valley</h4>
-                  <p>
-                    Highly visited all year-round "Skalnatá dolina" thanks to
-                    the hiking trails and connections of transport. The most
-                    interesting attraction for tourists is the cable car to
-                    Lomnický peak.
-                  </p>
-                  <h5>What I like about it :</h5>
-                  <p>
-                    The cable car transport is fun to experience which is why
-                    many people do. It's like a classic thing to make sure you
-                    do it when you get the chance.
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <a
-                    href="https://www.vysoketatry.com/ciele/sdolina/en.html"
-                    target="_blank"
-                    class="btn"
-                    >Learn more...</a
-                  >
-                </div>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2607.6309399726065!2d20.230065700000004!3d49.1885894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473e2226714c1d53%3A0xe8357aaefb40d0f0!2sSkalnat%C3%A1%20dolina!5e0!3m2!1snl!2snl!4v1723882895435!5m2!1snl!2snl"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
+              <div class="card-body">
+                <h4>Rocky Valley</h4>
+                <p>
+                  Highly visited all year-round "Skalnatá dolina" thanks to the
+                  hiking trails and connections of transport. The most
+                  interesting attraction for tourists is the cable car to
+                  Lomnický peak.
+                </p>
+                <h5>What I like about it :</h5>
+                <p>
+                  The cable car transport is fun to experience which is why many
+                  people do. It's like a classic thing to make sure you do it
+                  when you get the chance.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.vysoketatry.com/ciele/sdolina/en.html"
+                  target="_blank"
+                  class="btn"
+                  >Learn more...</a
+                >
               </div>
             </div>
             <div class="card">
-              <div class="card-heading">
+              <div class="card-heading grid">
                 <img
                   src="img/tatry-6.jpg"
                   alt="Kôprovský štít photo"
                   class="img-responsive"
                 />
-                <div class="card-body">
-                  <h4>Kôprovský štít</h4>
-                  <p>
-                    It's a climb of about a thousand meters with spectacular
-                    views from the top. Demanding high-mountain tour. The ascent
-                    to Kôprovský štít peak alone is demanding but technically
-                    simple.
-                  </p>
-                  <h5>What I like about it :</h5>
-                  <p>
-                    It was a challenge to go and do it myself but that feeling
-                    after you accomplish something difficult is unbelievable and
-                    double standing on top of a peak. I hated and at the same
-                    time liked seeing how much can one push himself and make it.
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <a
-                    href="https://www.solofemalewanderer.com/blog/kprovsky-tit"
-                    target="_blank"
-                    class="btn"
-                    >Learn more...</a
-                  >
-                </div>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20863.52815399019!2d20.0485728!3d49.1827058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47158a36aa6f3ce1%3A0x79fd323394e7e498!2zS8O0cHJvdnNrw70gxaF0w610!5e0!3m2!1snl!2snl!4v1723882739339!5m2!1snl!2snl"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
+              <div class="card-body">
+                <h4>Kôprovský štít</h4>
+                <p>
+                  It's a climb of about a thousand meters with spectacular views
+                  from the top. Demanding high-mountain tour. The ascent to
+                  Kôprovský štít peak alone is demanding but technically simple.
+                </p>
+                <h5>What I like about it :</h5>
+                <p>
+                  It was a challenge to go and do it myself but that feeling
+                  after you accomplish something difficult is unbelievable and
+                  double standing on top of a peak. I hated and at the same time
+                  liked seeing how much can one push himself and make it.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.solofemalewanderer.com/blog/kprovsky-tit"
+                  target="_blank"
+                  class="btn"
+                  >Learn more...</a
+                >
               </div>
             </div>
           </div>
