--- a/index.html
+++ b/index.html
@@ -170,6 +170,36 @@
             </div>
           </div>
         </section>
+        <section>
+          <h2 class="text-center">:{Gallery}:</h2>
+          <h3 class="text-center">Photographs from High Tatras...</h3>
+          <div class="grid grid-3-columns">
+            <iframe
+              src="https://assets.pinterest.com/ext/embed.html?id=243968504809227502"
+              class="embed shadow"
+              height="421"
+              width="236"
+              frameborder="0"
+              scrolling="no"
+            ></iframe>
+            <iframe
+              src="https://assets.pinterest.com/ext/embed.html?id=80853755802019489"
+              class="embed shadow"
+              height="421"
+              width="236"
+              frameborder="0"
+              scrolling="no"
+            ></iframe>
+            <iframe
+              src="https://assets.pinterest.com/ext/embed.html?id=243968504809227389"
+              class="embed shadow"
+              height="421"
+              width="236"
+              frameborder="0"
+              scrolling="no"
+            ></iframe>
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-columns-narrow">
