--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
           </div>
         </section>
-        <section>
+        <section class="gallery">
           <h2 class="text-center">:{Gallery}:</h2>
           <h3 class="text-center">Photographs from High Tatras...</h3>
           <div class="grid grid-3-columns">
