--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             />
           </div>
           <div>
+            <a name="more"></a>
             <h2>| Why High Tatras ?</h2>
             <h3>High Tatras an underrated Hiking GEM of Slovakia</h3>
             <p>
