Added CSS filters, Table and final touches

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   class="img-responsive"
                 />
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2607.6309399726065!2d20.230065700000004!3d49.1885894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473e2226714c1d53%3A0xe8357aaefb40d0f0!2sSkalnat%C3%A1%20dolina!5e0!3m2!1snl!2snl!4v1723882895435!5m2!1snl!2snl"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20847.841787156016!2d20.20831!3d49.21990215000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473e21d7980b0167%3A0xd01f0bffeedd647!2zSmFoxYhhY8OtIMWhdMOtdA!5e0!3m2!1snl!2snl!4v1723891029661!5m2!1snl!2snl"
                   class="embed"
                   style="border: 0"
                   allowfullscreen=""
@@ -106,23 +106,25 @@
                 ></iframe>
               </div>
               <div class="card-body">
-                <h4>Rocky Valley</h4>
+                <h4>Lamb peak</h4>
                 <p>
-                  Highly visited all year-round "Skalnatá dolina" thanks to the
-                  hiking trails and connections of transport. The most
-                  interesting attraction for tourists is the cable car to
-                  Lomnický peak.
+                  Beatiful granite pyramide of "Jahňací Štít" - Lamb peak.The
+                  marked route reaching the summit explains its remorseless
+                  popularity among Tatra hikers, absolutely wonderful and varied
+                  panorama attracts many. Jahnaci stays still also quite popular
+                  climbing target offering lots of routes of different technical
+                  difficulty level.
                 </p>
                 <h5>What I like about it :</h5>
                 <p>
-                  The cable car transport is fun to experience which is why many
-                  people do. It's like a classic thing to make sure you do it
-                  when you get the chance.
+                  It was my first ever hike and made me want to go for more.
+                  With a group of friends it has views to look at, not a hard
+                  hike, also very fun and interesting.
                 </p>
               </div>
               <div class="card-footer">
                 <a
-                  href="https://www.vysoketatry.com/ciele/sdolina/en.html"
+                  href="https://www.summitpost.org/jahnaci-stit/155074"
                   target="_blank"
                   class="btn"
                   >Learn more...</a
@@ -133,11 +135,11 @@
               <div class="card-heading grid">
                 <img
                   src="img/tatry-6.jpg"
-                  alt="Kôprovský štít photo"
+                  alt="Slavkovský štít photo"
                   class="img-responsive"
                 />
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20863.52815399019!2d20.0485728!3d49.1827058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47158a36aa6f3ce1%3A0x79fd323394e7e498!2zS8O0cHJvdnNrw70gxaF0w610!5e0!3m2!1snl!2snl!4v1723882739339!5m2!1snl!2snl"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20870.512776278672!2d20.16384468209176!3d49.16613677930331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473e2114e9dd72d5%3A0x546b9d814c84517a!2zU2xhdmtvdnNrw70gxaF0w610!5e0!3m2!1snl!2snl!4v1723891092883!5m2!1snl!2snl"
                   class="embed"
                   style="border: 0"
                   allowfullscreen=""
@@ -146,23 +148,24 @@
                 ></iframe>
               </div>
               <div class="card-body">
-                <h4>Kôprovský štít</h4>
+                <h4>Slavkovský štít</h4>
                 <p>
-                  It's a climb of about a thousand meters with spectacular views
-                  from the top. Demanding high-mountain tour. The ascent to
-                  Kôprovský štít peak alone is demanding but technically simple.
+                  This is a 5km black diamond singletrack trail located near
+                  Poprad. The fourth highest mountain peak that can be reached
+                  on a marked trail in the High Tatra mountains. It's summit is
+                  2452 meters above sea level.
                 </p>
                 <h5>What I like about it :</h5>
                 <p>
-                  It was a challenge to go and do it myself but that feeling
-                  after you accomplish something difficult is unbelievable and
+                  It was a challenge to go and do it, but that feeling after
+                  you've accomplished something difficult is unbelievable and
                   double standing on top of a peak. I hated and at the same time
                   liked seeing how much can one push himself and make it.
                 </p>
               </div>
               <div class="card-footer">
                 <a
-                  href="https://www.solofemalewanderer.com/blog/kprovsky-tit"
+                  href="https://www.10adventures.com/hikes/high-tatras/slavkovsky-stit/"
                   target="_blank"
                   class="btn"
                   >Learn more...</a
@@ -170,6 +173,34 @@
               </div>
             </div>
           </div>
+        </section>
+        <section>
+          <table class="container">
+            <thead>
+              <tr>
+                <th>Trail name</th>
+                <th>Duration</th>
+                <th>Distance</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Cottage at Zelené pleso</td>
+                <td>4h-5h</td>
+                <td>12.1km</td>
+              </tr>
+              <tr>
+                <td>Lamb peak</td>
+                <td>5.5h-6h</td>
+                <td>11.9km</td>
+              </tr>
+              <tr>
+                <td>Slavkovský štít</td>
+                <td>6h-9h</td>
+                <td>12.4km</td>
+              </tr>
+            </tbody>
+          </table>
         </section>
         <section class="gallery">
           <h2 class="text-center">:{Gallery}:</h2>
