--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h3>High Tatras an underrated Hiking GEM of Slovakia</h3>
             <p>
               The mountains that you've likely never heard of. They are a part
-              of the the northern edge of Slovakia and southern border of Poland
+              of the northern edge of Slovakia and southern border of Poland
               in Europe. They are the most elevated section of the Tatra chain
               within the Carpathian Mountains and form a natural border between
               the two countries. The area is popular with outdoor enthusiasts.
@@ -108,7 +108,7 @@
               <div class="card-body">
                 <h4>Lamb peak</h4>
                 <p>
-                  Beatiful granite pyramide of "Jahňací Štít" - Lamb peak.The
+                  Beatiful granite pyramide of "Jahňací Štít" - Lamb peak. The
                   marked route reaching the summit explains its remorseless
                   popularity among Tatra hikers, absolutely wonderful and varied
                   panorama attracts many. Jahnaci stays still also quite popular
