Just changing some visual aspects I decided not to have or change

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>- TRAVEL -</h3>
         <h1>Welcome to High Tatras</h1>
         <h2>Mountain range in Slovakia</h2>
-        <a href="#more"> Learn more ✨</a>
+        <a href="#more"> Learn more </a>
       </header>
       <main>
         <section class="grid grid-2-columns">
@@ -41,13 +41,13 @@
               within the Carpathian Mountains and form a natural border between
               the two countries. The area is popular with outdoor enthusiasts.
               Depending on the season, people come and visit for skiing,
-              climbing and hiking. 🎒
+              climbing and hiking.
             </p>
           </div>
         </section>
         <section class="secondary">
           <h2 class="text-center">.TRAILS.</h2>
-          <h3 class="text-center">My favorite hike trails to take 👟</h3>
+          <h3 class="text-center">Best hike trails to take</h3>
           <h2 class="text-center">ooo</h2>
           <div class="grid grid-3-columns">
             <div class="card">
@@ -75,9 +75,9 @@
                 </p>
                 <h5>What I like about it :</h5>
                 <p>
-                  I consider it to be one of the easiest and most enjoyable
-                  daytime adventures a person could go and experience. Fresh air
-                  and beautiful views all around !
+                  I consider it one of the easiest and most enjoyable daytime
+                  adventures anyone can experience. With fresh air and stunning
+                  views all around, it's a perfect way to spend the day.
                 </p>
               </div>
               <div class="card-footer">
@@ -117,9 +117,11 @@
                 </p>
                 <h5>What I like about it :</h5>
                 <p>
-                  It was my first ever hike and made me want to go for more.
-                  With a group of friends it has views to look at, not a hard
-                  hike, also very fun and interesting.
+                  My first hike was an incredible experience that left me eager
+                  for more. The trail, though not too challenging, offered
+                  breathtaking views and was a lot of fun to explore with a
+                  group of friends. It was both enjoyable and engaging, making
+                  me excited to plan my next adventure.
                 </p>
               </div>
               <div class="card-footer">
@@ -157,10 +159,11 @@
                 </p>
                 <h5>What I like about it :</h5>
                 <p>
-                  It was a challenge to go and do it, but that feeling after
-                  you've accomplished something difficult is unbelievable and
-                  double standing on top of a peak. I hated and at the same time
-                  liked seeing how much can one push himself and make it.
+                  It was a tough one to do, but the feeling after completing
+                  something challenging is amazing, especially when you're
+                  standing on top of a peak with the most incredible view. I
+                  both hated and enjoyed seeing how far I could push myself and
+                  still succeed.
                 </p>
               </div>
               <div class="card-footer">
@@ -174,7 +177,7 @@
             </div>
           </div>
         </section>
-        <section>
+        <section class="table-container">
           <table class="container">
             <thead>
               <tr>
@@ -203,7 +206,7 @@
           </table>
         </section>
         <section class="gallery">
-          <h2 class="text-center">:{Gallery}:</h2>
+          <h2 class="text-center">.Gallery.</h2>
           <h3 class="text-center">Photographs from High Tatras...</h3>
           <div class="grid grid-3-columns">
             <iframe
